@@ -2,6 +2,7 @@ Revision history for Box2D
 
 0.06
         Added radar example [jtpalmer]
+        Replaced use of 'parent' with 'base' [jtpalmer]
 
 0.05    27/08/2011
         Added b2RayCastCallback and PerlRayCastCallback [jtpalmer]
